@@ -17,16 +17,23 @@
 package net.vulkanmod.render.chunk.build.frapi.mesh;
 
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
-import net.fabricmc.fabric.api.renderer.v1.mesh.*;
-import net.fabricmc.fabric.api.util.TriState;
-import net.minecraft.client.model.geom.builders.UVPair;
-import net.minecraft.client.renderer.LightTexture;
+import net.minecraft.util.TriState;
+import net.minecraft.util.LightCoordsUtil;
 import net.minecraft.client.renderer.chunk.ChunkSectionLayer;
 import net.minecraft.client.renderer.item.ItemStackRenderState;
-import net.minecraft.client.renderer.block.model.BakedQuad;
-import net.minecraft.core.Direction;
+import net.minecraft.client.renderer.texture.TextureAtlasSprite;
+import net.vulkanmod.render.chunk.build.frapi.helper.fabric.ShadeMode;
+import net.vulkanmod.render.model.quad.ModelQuadView;
+import org.jetbrains.annotations.Nullable;
+import net.vulkanmod.render.chunk.build.frapi.helper.fabric.interfaces.QuadEmitter;
+import net.vulkanmod.render.chunk.build.frapi.helper.fabric.interfaces.QuadTransform;
+import net.vulkanmod.render.chunk.build.frapi.helper.fabric.interfaces.QuadView;
+import net.vulkanmod.render.chunk.build.frapi.helper.ColorHelper;
 import net.vulkanmod.render.chunk.build.frapi.helper.NormalHelper;
-import org.jspecify.annotations.Nullable;
+import net.vulkanmod.render.chunk.build.frapi.helper.TextureHelper;
+import net.minecraft.client.resources.model.geometry.BakedQuad;
+import net.minecraft.core.Direction;
+import net.vulkanmod.render.chunk.cull.QuadFacing;
 
 import java.util.Objects;
 
@@ -65,8 +72,10 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 		quad.ambientOcclusion(TriState.DEFAULT);
 		quad.glint(null);
 		quad.tintIndex(-1);
+		quad.tintIndex(-1);
 	}
 
+	protected boolean hasTransform = false;
 	private QuadTransform activeTransform = NO_TRANSFORM;
 	private final ObjectArrayList<QuadTransform> transformStack = new ObjectArrayList<>();
 	private final QuadTransform stackTransform = q -> {
@@ -88,7 +97,7 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public final MutableQuadViewImpl pos(int vertexIndex, float x, float y, float z) {
+	public MutableQuadViewImpl pos(int vertexIndex, float x, float y, float z) {
 		final int index = baseIndex + vertexIndex * VERTEX_STRIDE + VERTEX_X;
 		data[index] = Float.floatToRawIntBits(x);
 		data[index + 1] = Float.floatToRawIntBits(y);
@@ -98,13 +107,13 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public final MutableQuadViewImpl color(int vertexIndex, int color) {
+	public MutableQuadViewImpl color(int vertexIndex, int color) {
 		data[baseIndex + vertexIndex * VERTEX_STRIDE + VERTEX_COLOR] = color;
 		return this;
 	}
 
 	@Override
-	public final MutableQuadViewImpl uv(int vertexIndex, float u, float v) {
+	public MutableQuadViewImpl uv(int vertexIndex, float u, float v) {
 		final int i = baseIndex + vertexIndex * VERTEX_STRIDE + VERTEX_U;
 		data[i] = Float.floatToRawIntBits(u);
 		data[i + 1] = Float.floatToRawIntBits(v);
@@ -112,56 +121,47 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public final MutableQuadViewImpl lightmap(int vertexIndex, int lightmap) {
+	public MutableQuadViewImpl spriteBake(TextureAtlasSprite sprite, int bakeFlags) {
+		TextureHelper.bakeSprite(this, sprite, bakeFlags);
+		return this;
+	}
+
+	@Override
+	public MutableQuadViewImpl lightmap(int vertexIndex, int lightmap) {
 		data[baseIndex + vertexIndex * VERTEX_STRIDE + VERTEX_LIGHTMAP] = lightmap;
 		return this;
 	}
 
-	protected final void normalFlags(int flags) {
+	protected void normalFlags(int flags) {
 		data[baseIndex + HEADER_BITS] = EncodingFormat.normalFlags(data[baseIndex + HEADER_BITS], flags);
 	}
 
 	@Override
-	public final MutableQuadViewImpl normal(int vertexIndex, float x, float y, float z) {
-		normalFlags(normalFlags() | (1 << vertexIndex));
-		data[baseIndex + vertexIndex * VERTEX_STRIDE + VERTEX_NORMAL] = NormalHelper.packNormal(x, y, z);
+	public MutableQuadViewImpl normal(int vertexIndex, float x, float y, float z) {
 		return this;
 	}
 
 	/**
-	 * Internal helper method. Copies face normal to vertices lacking a normal.
+	 * Internal helper method. Copies face normals to vertex normals lacking one.
 	 */
 	public final void populateMissingNormals() {
-		final int normalFlags = this.normalFlags();
-
-		if (normalFlags == 0b1111) return;
-
-		final int packedFaceNormal = packedFaceNormal();
-
-		for (int v = 0; v < 4; v++) {
-			if ((normalFlags & (1 << v)) == 0) {
-				data[baseIndex + v * VERTEX_STRIDE + VERTEX_NORMAL] = packedFaceNormal;
-			}
-		}
-
-		normalFlags(0b1111);
 	}
 
 	@Override
-	public final MutableQuadViewImpl nominalFace(@org.jspecify.annotations.Nullable Direction face) {
+	public final MutableQuadViewImpl nominalFace(@Nullable Direction face) {
 		nominalFace = face;
 		return this;
 	}
 
 	@Override
-	public final MutableQuadViewImpl cullFace(@org.jspecify.annotations.Nullable Direction face) {
+	public final MutableQuadViewImpl cullFace(@Nullable Direction face) {
 		data[baseIndex + HEADER_BITS] = EncodingFormat.cullFace(data[baseIndex + HEADER_BITS], face);
 		nominalFace(face);
 		return this;
 	}
 
 	@Override
-	public MutableQuadViewImpl renderLayer(@org.jspecify.annotations.Nullable ChunkSectionLayer renderLayer) {
+	public MutableQuadViewImpl renderLayer(@Nullable ChunkSectionLayer renderLayer) {
 		data[baseIndex + HEADER_BITS] = EncodingFormat.renderLayer(data[baseIndex + HEADER_BITS], renderLayer);
 		return this;
 	}
@@ -186,7 +186,7 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public MutableQuadViewImpl glint(ItemStackRenderState.@Nullable FoilType glint) {
+	public MutableQuadViewImpl glint(@Nullable ItemStackRenderState.FoilType glint) {
 		data[baseIndex + HEADER_BITS] = EncodingFormat.glint(data[baseIndex + HEADER_BITS], glint);
 		return this;
 	}
@@ -195,12 +195,6 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	public MutableQuadViewImpl shadeMode(ShadeMode mode) {
 		Objects.requireNonNull(mode, "ShadeMode may not be null");
 		data[baseIndex + HEADER_BITS] = EncodingFormat.shadeMode(data[baseIndex + HEADER_BITS], mode);
-		return this;
-	}
-
-	@Override
-	public MutableQuadViewImpl atlas(QuadAtlas quadAtlas) {
-		data[baseIndex + HEADER_BITS] = EncodingFormat.quadAtlas(data[baseIndex + HEADER_BITS], quadAtlas);
 		return this;
 	}
 
@@ -217,7 +211,7 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public final MutableQuadViewImpl copyFrom(QuadView quad) {
+	public MutableQuadViewImpl copyFrom(QuadView quad) {
 		final QuadViewImpl q = (QuadViewImpl) quad;
 		System.arraycopy(q.data, q.baseIndex, data, baseIndex, EncodingFormat.TOTAL_STRIDE);
 		nominalFace = q.nominalFace;
@@ -231,50 +225,74 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 	}
 
 	@Override
-	public final MutableQuadViewImpl fromBakedQuad(BakedQuad quad) {
-		pos(0, quad.position0());
-		pos(1, quad.position1());
-		pos(2, quad.position2());
-		pos(3, quad.position3());
+	public final MutableQuadViewImpl fromVanilla(int[] quadData, int startIndex) {
+		System.arraycopy(quadData, startIndex, data, baseIndex + HEADER_STRIDE, VANILLA_QUAD_STRIDE);
+		isGeometryInvalid = true;
 
-		color(0xFFFFFFFF, 0xFFFFFFFF, 0xFFFFFFFF, 0xFFFFFFFF);
+		int colorIndex = baseIndex + VERTEX_COLOR;
 
-		long packedUV0 = quad.packedUV0();
-		long packedUV1 = quad.packedUV1();
-		long packedUV2 = quad.packedUV2();
-		long packedUV3 = quad.packedUV3();
-		uv(0, UVPair.unpackU(packedUV0), UVPair.unpackV(packedUV0));
-		uv(1, UVPair.unpackU(packedUV1), UVPair.unpackV(packedUV1));
-		uv(2, UVPair.unpackU(packedUV2), UVPair.unpackV(packedUV2));
-		uv(3, UVPair.unpackU(packedUV3), UVPair.unpackV(packedUV3));
-
-		int lightEmission = quad.lightEmission();
-		int lightmap = LightTexture.pack(lightEmission, lightEmission);
-		lightmap(lightmap, lightmap, lightmap, lightmap);
-
-		normalFlags(0);
-
-		nominalFace(quad.direction());
-		emissive(lightEmission == 15);
-		diffuseShade(quad.shade());
-		QuadAtlas atlas = QuadAtlas.of(quad.sprite().atlasLocation());
-
-		if (atlas == null) {
-			atlas = QuadAtlas.BLOCK;
+		for (int i = 0; i < 4; i++) {
+			data[colorIndex] = ColorHelper.fromVanillaColor(data[colorIndex]);
+			colorIndex += VERTEX_STRIDE;
 		}
 
-		atlas(atlas);
-		tintIndex(quad.tintIndex());
+		normalFlags(0);
 		return this;
 	}
 
 	@Override
+	public final MutableQuadViewImpl fromBakedQuad(BakedQuad quad) {
+        ModelQuadView quadView = (ModelQuadView) (Object) quad;
+        int vertexStart = baseIndex;
+        for (int i = 0; i < 4; i++) {
+            data[vertexStart + VERTEX_X] = Float.floatToRawIntBits(quadView.getX(i));
+            data[vertexStart + VERTEX_Y] = Float.floatToRawIntBits(quadView.getY(i));
+            data[vertexStart + VERTEX_Z] = Float.floatToRawIntBits(quadView.getZ(i));
+            data[vertexStart + VERTEX_COLOR] = 0xFFFFFFFF;
+            data[vertexStart + VERTEX_U] = Float.floatToRawIntBits(quadView.getU(i));
+            data[vertexStart + VERTEX_V] = Float.floatToRawIntBits(quadView.getV(i));
+            data[vertexStart + VERTEX_LIGHTMAP] = 0;
+            vertexStart += VERTEX_STRIDE;
+        }
+
+		nominalFace(quad.direction());
+		diffuseShade(quad.materialInfo().shade());
+		tintIndex(quad.materialInfo().tintIndex());
+
+		int normal = quadView.getNormal();
+		data[baseIndex + HEADER_FACE_NORMAL] = normal;
+		NormalHelper.unpackNormalTo(normal, faceNormal);
+
+		Direction lightFace = quadView.lightFace();
+		data[baseIndex + HEADER_BITS] = EncodingFormat.lightFace(data[baseIndex + HEADER_BITS], lightFace);
+		data[baseIndex + HEADER_BITS] = EncodingFormat.geometryFlags(data[baseIndex + HEADER_BITS], quadView.getFlags());
+
+		QuadFacing quadFacing = quadView.getQuadFacing();
+		if (quadFacing == null) {
+			quadFacing = QuadFacing.fromDirection(lightFace);
+		}
+		this.facing = quadFacing;
+		this.isGeometryInvalid = false;
+
+		int lightEmission = quad.materialInfo().lightEmission();
+
+		if (lightEmission > 0) {
+			for (int i = 0; i < 4; i++) {
+				lightmap(i, LightCoordsUtil.lightCoordsWithEmission(lightmap(i), lightEmission));
+			}
+		}
+
+		return this;
+	}
+
+	//@Override
 	public void pushTransform(QuadTransform transform) {
 		if (transform == null) {
 			throw new NullPointerException("QuadTransform cannot be null!");
 		}
 
 		transformStack.push(transform);
+		hasTransform = true;
 
 		if (transformStack.size() == 1) {
 			activeTransform = transform;
@@ -283,14 +301,15 @@ public abstract class MutableQuadViewImpl extends QuadViewImpl implements QuadEm
 		}
 	}
 
-	@Override
+	//@Override
 	public void popTransform() {
 		transformStack.pop();
 
-		if (transformStack.isEmpty()) {
+		if (transformStack.size() == 0) {
 			activeTransform = NO_TRANSFORM;
+			hasTransform = false;
 		} else if (transformStack.size() == 1) {
-			activeTransform = transformStack.getFirst();
+			activeTransform = transformStack.get(0);
 		}
 	}
 
